--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="apple-mobile-web-app-title" content="F1 News">
     <meta name="theme-color" content="#E10600">
     <title>F1 News - Live Updates</title>
-    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23E10600' width='100' height='100'/><text y='75' x='50' text-anchor='middle' font-size='60' fill='white' font-family='Arial Black'>F1</text></svg>">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23E10600' width='100' height='100'/><text y='75' x='50' text-anchor='middle' font-size='60' fill='white' font-family='Arial Black'>F1</text></svg>">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="icon.png">
     <link rel="manifest" href="manifest.json">
     <style>
         * {
